<resources>
    <string name="app_name">Assignment2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_calculate_do_f">CalculateDoFActivity</string>
    <string name="textview">TextView</string>
    <string name="selected_aperture">Selected aperture</string>
    <string name="ex_2_8_for_f2_8">ex: 2.8 for F2.8</string>
    <string name="click_to_calculate">Click to Calculate</string>
    <string name="distance_to_subject_m">Distance to subject [m]</string>
    <string name="ex_1_5_for_1_5m">ex: 1.5 for 1.5m</string>
    <string name="ex_0_029">ex: 0.029</string>
    <string name="circle_of_confusion_m">Circle of Confusion [m]</string>
    <string name="photo_details_with">Photo details with</string>
    <string name="title_activity_add_lense">AddLenseActivity</string>
    <string name="title_activity_edit_len">EditLen</string>
    <string name="title_activity_edit_one">EditOne</string>
    <string name="title_activity_delete">delete</string>
</resources>