<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="734dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-3dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nearFocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Near Focal Distance: "
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nearFocalResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="Enter all values" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Farfocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Far Focal Distance: "
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/FarfocalResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Enter all values" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Dof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Depth of Field: "
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/DofResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Enter all values" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hyper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hyperfocal Distance: "
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hyperResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Enter all values" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/photodetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photo_details_with"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lensDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/askCoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/circle_of_confusion_m"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/inputCoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ex_0_029"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/askDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/distance_to_subject_m"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/inputDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ex_1_5_for_1_5m"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/askAperture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selected_aperture"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/inputAperture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ex_2_8_for_f2_8"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Button
            android:id="@+id/Calculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_to_calculate" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>